finished styling the img containers; added hr borders; styled spacing; now working on fixing the header nav spacing

--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,41 @@ header #skyline {
     background-color: dodgerblue;
 }
 
+main {
+    margin: 0% 5% 2% 0%;
+}
+
+#section1 {
+    display: flex;
+    flex-direction: column;
+}
+
+#secton1 div {
+    flex-wrap: wrap;
+}
+
+#section1-5,
+#section1-6 {
+    display: flex;
+}
+
+#item1,
+#item2,
+#item3,
+#item4 {
+    margin: 2%;
+}
+
+button {
+    margin: 5%;
+    background-color: none;
+    width: 125px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 16px;
+    border: 2px solid black;
+}
+
 h1,
 h2,
 h3,
